--- a/csv_generator/Pipfile
+++ b/csv_generator/Pipfile
@@ -1,18 +1,13 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
 "beautifulsoup4" = "~=4.6.0"
 lxml = "~=4.2.1"
 pendulum = "*"
-
+tqdm = "*"
 
 [dev-packages]
-
 pytest = "*"
-
