--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,7 @@ celerybeat-schedule
 .env
 .venv
 env/
-venv/
+venv
 ENV/
 env.bak/
 venv.bak/
@@ -102,3 +102,7 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# Default output directories
+/output
+/zip_output
