dockerize db manager (#10)
* Initial draft of working SQL, for DB Managers

* Split prototyped sql into python modules
- included example schema and csv files
- minimal code re-use, consider OO instead
- happy-path protoype (no logging, type checking, etc)

* Updated schema to match current source CSV files
- Added new dimension for Country
- Manually mapped csv field names to database column names
- Created simple dummy dataset for "does it run?" testing

* Added to example, relabelling country synonyms
- Also identified and corrected missing commits

* dockerized db manager

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 COMPOSE_PROJECT_NAME=data-pipeline
 IMAGE_TAG=develop
+DATABASE_NAME=elife_ejp
+DATABASE_USER=elife_ejp
+DATABASE_PASSWORD=elife_ejp
