moved csv_generator to csv-generator (#38)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
 
     csv-generator:
         build:
-            context: ./csv_generator
+            context: ./csv-generator
         command: '--help'
         image: data-pipeline/csv-generator:${IMAGE_TAG}
         volumes:
