db_manager main script and Example of an 1:many SCD2 table : DimPersonRole (#11)
* db_manager main script allowing import from directory

* enabled db-manager tests

* lock pyyaml version to 3.12

* naturally sort filenames (which will sort by timestamp at the start of the filename)

* group files by timestamp and apply changes after staging each file in the group

* Example of a 1:many SCD2 table : DimPersonRole

- Updated DimPerson
- Added DimRole and DimPersonRole
- Included extremely basic "does it run" example data

* Issue #45 - msid is now a VARCHAR(255)
- Accomodates values with a leading 0, etc

* fixed xml without manuscript

* added person roles and addresses XML examples

* added processing of person and person role to main script

* fixed extracting timestamp from filenames in sub directory

* added --debug flag

* added more debug logging; convert grouped_filenames to list

* renamed person_roles.csv to person_role.csv

* changed headers to use underscore

* fixed 00002_reviewer2 id in example xml

* added profile-modify-date to examples

* added missing profile_modify_date to persons output

* added profile_modify_date to person-roles csv

* comment out xml files that would cause a non-numeric msid

* added support for YYYY-MM-DDTHH:mm:ss timestamps

* Added SCD1 properties of DimPerson
- Columns match output of csv generator
- Still to determine if any of these should be tracked over time (such as status?)
- No action taken on email addresses, intention is to have a more generic approach

--- a/db-manager/Pipfile
+++ b/db-manager/Pipfile
@@ -5,6 +5,10 @@ name = "pypi"
 
 [packages]
 psycopg2-binary = "*"
+natsort = "*"
 
 [dev-packages]
 pytest = "*"
+pylint = "*"
+pytest-watch = "*"
+pyyaml = "==3.12"
