--- a/csv-generator/Pipfile
+++ b/csv-generator/Pipfile
@@ -1,14 +1,20 @@
 [[source]]
+
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
+
 [packages]
+
 lxml = "~=4.2.1"
 pendulum = "*"
 tqdm = "*"
+requests = "*"
+
 
 [dev-packages]
+
 pytest = "*"
 pytest-watch = "*"
 pylint = "*"
