Create initial manuscript data pipeline dag

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+ARCHIVE_BUCKET=fake-archive-bucket
+INCOMING_BUCKET=fake-bucket
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 COMPOSE_PROJECT_NAME=data-pipeline
 IMAGE_TAG=develop
 DATABASE_NAME=elife_ejp
