Add run_db_manager dag task

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 COMPOSE_PROJECT_NAME=data-pipeline
 IMAGE_TAG=develop
+DATA_PIPELINE_DATABASE_HOST=db
+DATA_PIPELINE_DATABASE_PORT=5432
 DATA_PIPELINE_DATABASE_NAME=elife_ejp
 DATA_PIPELINE_DATABASE_USER=elife_ejp
 DATA_PIPELINE_DATABASE_PASSWORD=elife_ejp
