created separated wheels docker image (#103)
* created separated wheels docker image

* removed generate_wheels.sh

* re-usable airflow image

* install wheels as part of airflow docker image

--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,3 +1,6 @@
+ARG IMAGE_TAG
+FROM elifesciences/data-pipeline-wheels:${IMAGE_TAG} AS wheels
+
 FROM python:3.6-jessie
 
 ARG AIRFLOW_VERSION=1.9.0
@@ -12,9 +15,14 @@ RUN set -ex \
     && useradd -s /bin/bash -d ${AIRFLOW_HOME} airflow \
     && pip install -U pipenv
 
+
 COPY Pipfile .
 COPY Pipfile.lock .
 RUN pipenv install --system --deploy
+
+COPY --from=wheels /opt/wheels /opt/wheels
+RUN pip install --user /opt/wheels/*.whl && \
+    rm -rf /opt/wheels
 
 COPY . ./
 
