fix wheel packages (#105)
* added simple airflow test; removed unnecessary dependencies

* moved csv_generator and db_manager dependencies up

* adding celery with redis back in

* upgraded celery (breaking change in kombu)

* downgraded postgres database

--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -21,7 +21,7 @@ COPY Pipfile.lock .
 RUN pipenv install --system --deploy
 
 COPY --from=wheels /opt/wheels /opt/wheels
-RUN pip install --user /opt/wheels/*.whl && \
+RUN pip install /opt/wheels/*.whl && \
     rm -rf /opt/wheels
 
 COPY . ./
